[project]
name = "sam_audio"
version = "0.1.0+lite"
description = "SAM Audio — Lightweight build for flow-matching inference"
requires-python = ">=3.10"
dependencies = [
    "dacvae@git+https://github.com/facebookresearch/dacvae.git",
    "einops",
    "numpy",
    "torch",
    "torchaudio",
    "transformers>=4.54.0",
    "huggingface-hub<1.0,>=0.34.0",
    "torchdiffeq",
]

[tool.setuptools.packages.find]
include = ["sam_audio*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
